dev_server.log

> autofolio@0.1.0 dev
> next dev

▲ Next.js 16.1.6 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.2:3000

✓ Starting...
Attention: Next.js now collects completely anonymous telemetry regarding usage.
This information is used to shape Next.js' roadmap and prioritize features.
You can learn more, including how to opt-out if you'd not like to participate in this anonymous program, by visiting the following URL:
https://nextjs.org/telemetry

✓ Ready in 1898ms
○ Compiling / ...
 GET / 200 in 12.9s (compile: 11.6s, proxy.ts: 470ms, render: 773ms)
⨯ SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (src/app/api/chat/route.ts:13:34)
  11 |
  12 | export async function POST(req: Request) {
> 13 |   const { messages } = await req.json()
     |                                  ^
  14 |
  15 |   // 1. Fetch the selected model from DB (using Service Role to bypass RLS)
  16 |   const { data, error } = await adminClient
